--- a/main.css
+++ b/main.css
@@ -70,6 +70,47 @@ nav {
 
 .sponsor-advert {
   height: 20px;
+  margin-bottom: 20px;
   background: #FFF;
   text-align: center;
+}
+
+.player-stats {
+  position: relative;
+  height: 200px;
+  margin-bottom: 15px;
+  border: 1px solid black;
+}
+
+.player-stat-header {
+  margin: 0;
+  text-align: center;
+  background: green;
+}
+
+.player-stats img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  margin: 8px;
+  border-radius: 50%;
+}
+
+.stat {
+  margin: 15px 0 0 0;
+  font-size: 3em;
+}
+
+.player-content p {
+  margin: 0;
+}
+
+.player-name {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 48px;
+  margin: 0;
+  text-align: center;
+  background: lightgrey;
 }
