--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ nav {
 
 .nav-header {
   display: inline-block;
-  margin: 8px 0 0px 10px;
+  margin: 8px 0 0px 25px;
   font-size: 1.3em;
 }
 
@@ -77,7 +77,9 @@ nav {
   height: 20px;
   max-width: 380px;
   margin: 0 auto 20px auto;
-  background: #FFF;
+  background: #0575E6;
+  background: -webkit-linear-gradient(to left, #0575E6 , #021B79);
+  background: linear-gradient(to left, #0575E6 , #021B79);
   text-align: center;
 }
 
@@ -94,7 +96,7 @@ nav {
   flex: 1 1 98%;
   height: 200px;
   max-width: 380px;
-  margin: 0 5px 15px 5px;
+  margin: 0 4px 15px 4px;
   background: #FFF;
   border: 2px solid #c3a572;
 }
