--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
-html,
+/*html,
 body {
   height: 100%;
-}
+}*/
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -28,7 +28,7 @@ nav {
 
 .nav-header {
   display: inline-block;
-  margin: 6px 0 0 0;
+  margin: 6px 0 0 25px;
   font-size: 1.3em;
 }
 
@@ -75,7 +75,9 @@ nav {
 }
 
 .sponsor-advert {
-  height: 20px;
+  display: flex;
+  justify-content: center;
+  height: 30px;
   max-width: 385px;
   margin: 0 auto 20px auto;
   background: #0575E6;
@@ -87,9 +89,19 @@ nav {
 .sponsor-advert p{
   font-size: 0.4em;
   margin: 0;
-  padding-top: 5px;
+  padding-top: 10px;
   color: #FFF;
 
+}
+
+.sponsor-advert img {
+  width: 25px;
+  height: 25px;
+  padding-top: 2.5px;
+}
+
+.sponsor-text {
+  font-size: 14px;;
 }
 
 .stat-content {
@@ -157,9 +169,9 @@ nav {
 
 /*MEDIA*/
 @media screen and (min-width: 800px) {
-  /*.player-stats {
-    margin: 0 5px 15px 5px;
-  }*/
+  html, body {
+    height: 100%;
+  }
   .sponsor-advert {
     max-width: 775px;
   }
