--- a/main.css
+++ b/main.css
@@ -169,7 +169,15 @@ nav {
 /*Fixture Content*/
 
 .fixtures {
+  margin: 0 -8px 0 -8px;
+  padding-bottom: 2px;
   background: #eceeed;
+}
+
+.lines {
+  width: 30px;
+  margin: 0 auto;
+  display: block;
 }
 
 .matches {
@@ -183,9 +191,11 @@ nav {
 .dates {
   justify-content: space-between;
   display: flex;
+  width: 90%;
   align-items: center;
-  margin-bottom: 10px;
+  margin: 0 auto 10px auto;
   background: #FFF;
+  border: 2px solid #c3a572
 }
 
 .fixture-day {
