--- a/main.css
+++ b/main.css
@@ -1,8 +1,3 @@
-/*html,
-body {
-  height: 100%;
-}*/
-
 body {
   font-family: 'Montserrat', sans-serif;
   background: #000000; /* fallback for old browsers */
@@ -11,6 +6,7 @@ body {
 }
 
 /*Nav*/
+
 nav {
   height: 40px;
   margin: -8px;
@@ -29,7 +25,8 @@ nav {
 
 .nav-header {
   display: inline-block;
-  margin: 6px 0 0 22px;
+  margin: 2px 0 0 22px;
+  font-family: 'Oswald', sans-serif;
   font-size: 1.3em;
 }
 
@@ -84,7 +81,7 @@ nav {
   height: 30px;
   max-width: 385px;
   margin: 0 auto 20px auto;
-  background: #0575E6;
+  background: #0575E6; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #0575E6 , #021B79);
   background: linear-gradient(to left, #0575E6 , #021B79);
   text-align: center;
